--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ branches:
   only:
     - master
 before_install:
-  curl -s get.gvmtool.net | bash
-  gvm install grails 1.3.9
+  -curl -s get.gvmtool.net
+  -gvm install grails 1.3.9
