--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ branches:
   only:
     - master
 before_install:
-  curl -s get.gvmtool.net >> gvm.sh | chmod 755 gvm.sh | ./gvm.sh | gvm install grails 1.3.9
+  curl -s get.gvmtool.net >> gvm.sh | chmod 777 gvm.sh | ./gvm.sh | gvm install grails
 script:
   grails test-app
