--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ branches:
   only:
     - master
 before_install:
- curl -s get.gvmtool.net >> gvm.sh | sudo chmod 777 gvm.sh | sudo sh ./gvm.sh | sudo gvm install grails
+ curl -s get.gvmtool.net >> gvm.sh | sudo chmod 777 gvm.sh | sudo sh ./gvm.sh | gvm install grails 1.3.9
 script:
   grails test-app
